Updated last years line up section

--- a/index.html
+++ b/index.html
@@ -134,44 +134,44 @@
 							<h4>Check out last year's lineup</h4>
 						</div>
 						<div class="span3">
-							<a href="#" class="pull-right button blue">View the 2012 schedule</a>
+							<a href="http://makezine.com/maker-camp/schedule/index.html" class="pull-right button blue">View the 2012 schedule</a>
 						</div>
 					</div>
 					<div class="row">
 
 						<div class="featured span">
 
-							<img src="components/bootstrap/img/coke-car.jpg" alt="Coke Car">
+							<a href="https://plus.google.com/u/0/100927297460393734192/posts/NXFsS9S7qaa" target="_blank"><img src="components/bootstrap/img/coke-mentos-rocket-car.jpg" alt="Coke Mentos Rocket Car"></a>
 							<h5>Project</h5>
-							<h6>Coke Mentos Rocket Car</h6>
+							<h6><a href="https://plus.google.com/u/0/100927297460393734192/posts/NXFsS9S7qaa" target="_blank">Coke Mentos<br />Rocket Car</a></h6>
 
 						</div>	
 						<div class="featured span">
 
-							<img src="components/bootstrap/img/coke-car.jpg" alt="Coke Car">
+							<a href="https://plus.google.com/u/0/+BritMorin/posts/UtqksShVeCh" target="_blank"><img src="components/bootstrap/img/hardware-jewelry.jpg" alt="Hardware Jewelry"></a>
 							<h5>Project</h5>
-							<h6>Hardware Jewelry</h6>
+							<h6><a href="https://plus.google.com/u/0/+BritMorin/posts/UtqksShVeCh" target="_blank">Hardware Jewelry</a></h6>
 
 						</div>	
 						<div class="featured span">
 
-							<img src="components/bootstrap/img/coke-car.jpg" alt="Coke Car">
+							<a href="https://plus.google.com/+NASA/posts/RNBZhdLDZmv" target="_blank"><img src="components/bootstrap/img/nasa.jpg" alt="NASA Field Trip"></a>
 							<h5>Field Trip</h5>
-							<h6>NASA</h6>
+							<h6><a href="https://plus.google.com/+NASA/posts/RNBZhdLDZmv" target="_blank">NASA</a></h6>
 
 						</div>	
 						<div class="featured span">
 
-							<img src="components/bootstrap/img/coke-car.jpg" alt="Coke Car">
+							<a href="https://plus.google.com/103055944392161103866/posts/ZMLajXcc9E1" target="_blank"><img src="components/bootstrap/img/animated-gifs.jpg" alt="ANimated GIFs"></a>
 							<h5>Project</h5>
-							<h6>Animated GIFs</h6>
+							<h6><a href="https://plus.google.com/103055944392161103866/posts/ZMLajXcc9E1" target="_blank">Animated GIFs</a></h6>
 
 						</div>	
 						<div class="featured span">
 
-							<img src="components/bootstrap/img/coke-car.jpg" alt="Coke Car">
+							<a href="https://plus.google.com/+NatGeo/posts/PG2gKidf85u" target="_blank"><img src="components/bootstrap/img/octocopters.jpg" alt="Octocopters"></a>
 							<h5>Project</h5>
-							<h6>Octocopters</h6>
+							<h6><a href="https://plus.google.com/+NatGeo/posts/PG2gKidf85u" target="_blank">Octocopters</a></h6>
 
 						</div>		
 
@@ -187,7 +187,7 @@
 							<h2>Join us for the kickoff event on July 8th!</h2>
 						</div>
 						<div class="span3">
-							<a href="#" class="button pull-right">RSVP on Google+</a>
+							<a href="https://plus.google.com/+MAKE/posts" class="button pull-right">RSVP on Google+</a>
 						</div>
 					</div>
 				</div>
@@ -298,7 +298,8 @@
 
 					</div>
 
-				</div>			</div>
+				</div>			
+			</div>
 		</div>
 
 	</section>
