Updated all links and ready to merg with Bill's copy

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
-				<a class="brand" href="#">MAKE</a>
+				<a class="brand" href="http://makezine.com/">MAKE</a>
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li class="active"><a href="#">Magazine</a></li>
-						<li><a href="#about">Blog</a></li>
-						<li><a href="#contact">Maker Faire</a></li>
-						<li><a href="#">Maker Shed</a></li>
-						<li><a href="#">Craft</a></li>
+						<li class="active"><a href="http://blog.makezine.com/volume/make-34/">Magazine</a></li>
+						<li><a href="http://makezine.com/">Blog</a></li>
+						<li><a href="http://makerfaire.com/">Maker Faire</a></li>
+						<li><a href="http://www.makershed.com/Default.asp">Maker Shed</a></li>
 					</ul>
 					<form class="navbar-search pull-right">
 						<input type="text" class="search-query" placeholder="Search">
@@ -51,10 +50,10 @@
 	<div class="black-bar">
 		<div class="container">
 			<ul class="nav nav-inline pull-left">
-				<li><a href="#">FAQs</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="http://makezine.com/maker-camp/faq.html">FAQs</a></li>
+				<li><a href="http://makezine.com/maker-camp/contact.html">Contact</a></li>
 			</ul>
-			<p class="pull-right"><a href="#">Include Maker Camp in your summer program.</a></p>
+			<p class="pull-right"><a href="register-program-summer.html">Include Maker Camp in your summer program.</a></p>
 		</div>
 	</div>
 
@@ -111,9 +110,9 @@
 
 					<h3><span class="cap">Hangout with Us</span> Join our daily Google+ Hangouts, where we'll share tips and tricks on the projects, and go on virtual Field Trips to amazing places.</h3>
 
-					<h3><span class="cap">Share Projects</span> See what other Maker Campers are building, and share your own project photos and videos on Google+</h3>
+					<h3 class="last"><span class="cap">Share Projects</span> See what other Maker Campers are building, and share your own project photos and videos on Google+</h3>
 
-					<a href="http://google.com/+make" class="button big block">To Join, Follow MAKE on Google+</a>
+					<a href="http://google.com/+make" class="button big block" style="position:relative; top:56px;">To Join, Follow MAKE on Google+</a>
 
 				</div>
 
@@ -129,12 +128,12 @@
 
 			<div class="row">
 				<div class="span12">
-					<div class="row">
+					<div class="row" style="margin-top:10px;">
 						<div class="span9">
-							<h4>Check out last year's lineup</h4>
+							<h4 style="line-height:1.4;">Check out last year's lineup</h4>
 						</div>
 						<div class="span3">
-							<a href="http://makezine.com/maker-camp/schedule/index.html" class="pull-right button blue">View the 2012 schedule</a>
+							<a href="http://makezine.com/maker-camp/schedule.html" class="pull-right button blue">View the 2012 schedule</a>
 						</div>
 					</div>
 					<div class="row">
@@ -187,7 +186,7 @@
 							<h2>Join us for the kickoff event on July 8th!</h2>
 						</div>
 						<div class="span3">
-							<a href="https://plus.google.com/+MAKE/posts" class="button pull-right">RSVP on Google+</a>
+							<a href="https://plus.google.com/+MAKE/posts" class="button pull-right" target="_blank" style="font-size:22px;">RSVP on Google+</a>
 						</div>
 					</div>
 				</div>
@@ -303,6 +302,30 @@
 		</div>
 
 	</section>
+	<section id="footer" class="white-bg">
+		
+		<div class="container">
+			<div class="row">
+				<ul>
+					<li>Resources</li>
+					<li><a href="http://cdn.makezine.com/make/maker-camp/coordinator/MakerCamp_Talent_Release.pdf">Hangout Participant Release Form</a></li>
+					<li><a href="https://support.google.com/plus/answer/2407397?hl=en&topic=2409412&ctx=topic">G+ Teen Safety Guide</a></li>
+					<li><a href="http://www.google.com/intl/en/+/safety/">Safety Center</a></li>
+					<li><a href="https://support.google.com/plus/answer/2423637?hl=en&topic=2401644&ctx=topic">For Parents</a></li>
+					<li class="last"><a href="https://support.google.com/plus/answer/2403357?hl=en&topic=2401644&ctx=topic">For Education</a></li>
+				</ul>
+			</div>
+			<div class="row">
+				<div class="span6 text-right">
+					<h3 class="red">Just follow MAKE on G+</h3>
+				</div>
+				<div class="span6">
+					<div class="g-plus" data-width="275" data-height="69" data-href="//plus.google.com/109780686446922422512?rel=publisher"></div>
+				</div>
+			</div>
+		</div>
+
+	</section>
 
 	</div> <!-- /container -->
 
@@ -322,5 +345,15 @@
 	<script src="components/bootstrap/js/bootstrap-collapse.js"></script>
 	<script src="components/bootstrap/js/bootstrap-carousel.js"></script>
 	<script src="components/bootstrap/js/bootstrap-typeahead.js"></script>
+
+	<!-- Place this tag after the last badge tag. -->
+		<script type="text/javascript">
+			(function() {
+				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+				po.src = 'https://apis.google.com/js/plusone.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+			})();
+		</script>
+
 </body>
 </html>
