--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<li><a href="http://makezine.com/maker-camp/faq.html">FAQs</a></li>
 				<li><a href="http://makezine.com/maker-camp/contact.html">Contact</a></li>
 			</ul>
-			<p class="pull-right"><a href="register-program-summer.html">Include Maker Camp in your summer program.</a></p>
+			<p class="pull-right"><a href="http://makezine.com/maker-camp/register-program-summer.html">Include Maker Camp in your summer program.</a></p>
 		</div>
 	</div>
 
