--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 
 	</section>
 
-	<section >
+	<section class="lower-gradation" >
 
 		<div class="container">
-			<div class="row">
+			<div class="row lower-area">
 				<div class="span6">
 					<div class="row">
 
@@ -213,7 +213,7 @@
 
 							<h4>Meet other campers and show off your projects in the Maker Camp Community</h4>
 
-							<a href="#" class="button blue">Join on Google+</a>
+							<a href="https://plus.google.com/109780686446922422512?prsrc=2" class="button blue">Join on Google+</a>
 
 						</div>
 
@@ -229,7 +229,7 @@
 
 						<div class="span2">
 
-							<img src="components/bootstrap/img/campfire.png" alt="Photo Frame">
+							<img src="components/bootstrap/img/rocket.png" alt="Photo Frame">
 
 						</div>
 
@@ -237,7 +237,7 @@
 
 							<h4>Engage teens with fun events! Include Maker Camp in your Summer Program</h4>
 
-							<a href="#" class="button blue">Register Your Program</a>
+							<a href="/maker-camp/register-program-summer.html" class="button blue">Register Your Program</a>
 
 						</div>
 
@@ -247,7 +247,6 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
 	<section>
 
@@ -255,13 +254,36 @@
 			<div class="row">
 				<div class="span4">
 
-					<div class="windows white">
+					<div class="windows white feature-box">
 
-						<h4>Hey Campers</h4>
-						<p>Sign up to receive exclusive offers from <span style="color:red;">MAKE</span></p>
+						<div class="features-box-content">
+
+							<h4>Hey Campers</h4>
+							<h5>Sign up to receive exclusive offers from <span style="color:red;font-weight:bold;">MAKE</span></h5>
+							<img src="components/bootstrap/img/robot-trees.png" alt="">
+
+						</div>
+						
 						<a href="#" class="button blue">Sign Up Now</a>
 
-						<img src="components/bootstrap/img/photo.png" alt="Photo Frame">
+					</div>
+
+				</div>
+
+				<div class="span4">
+
+					<div class="windows white feature-box">
+
+						<div class="features-box-content">
+
+							<p>Subscribe to <span style="color:red;">MAKE magazine</span> today to receive a FREE copy of our special Maker Projects Guide!</p>
+
+							<img src="components/bootstrap/img/mag-cover.jpg" alt="">
+
+						</div>	
+
+							<!-- Enter form here-->
+							<a href="https://readerservices.makezine.com/MK/subscribe.aspx?PC=MK&PK=M6FTR1" class="button blue">Subscribe Now</a>
 
 					</div>
 
@@ -269,31 +291,17 @@
 
 				<div class="span4">
 
-					<div class="windows white">
+					<div class="windows white feature-box">
+						<div class="features-box-content">
 
+							<h4>MAKER SHED</h4>
+							<p>Deal of the Week!</p>
 
-						<p>Subscribe to <span style="color:red;">MAKE magazine</span> today to receive a FREE copy of our special Maker Projects Guide!</p>
-						<!-- Enter form here-->
-						<a href="#" class="button blue">Subscribe Now</a>
+							<img src="components/bootstrap/img/shed-promo.jpg" alt="">
 
-						<img src="components/bootstrap/img/photo.png" alt="Photo Frame">
+						</div>
 
-
-					</div>
-
-				</div>
-
-				<div class="span4">
-
-					<div class="windows white">
-
-
-						<h4>MAKER SHED</h4>
-						<p>Deal of the Week!</p>
-
-						<img src="components/bootstrap/img/photo.png" alt="Photo Frame">
-
-						<a href="#" class="button blue">Go Shopping</a>
+						<a href="http://www.makershed.com/" class="button blue">Go Shopping</a>
 
 					</div>
 
